fixed index.html
