# src/main/java/es/us/isa/governify/designer/modules/agreement/api/DefaultApi.java
@@ -32,11 +32,21 @@ public class DefaultApi {
     @ApiOperation(value = "", notes = "This endpoint returns the agreement module manifest.", response = ModuleManifest.class)
     @ApiResponses(value = {
         @ApiResponse(code = 200, message = "The agreement module manifest in JSON format")})
+    @RequestMapping(value = "/manifest",
+            produces = {"application/json", "text/plain"},
+            method = RequestMethod.GET)
+    public ResponseEntity<ModuleManifest> rootGet() throws NotFoundException {
+        return new ResponseEntity<>(module, HttpStatus.OK);
+    }
+    
+    @ApiOperation(value = "", notes = "This endpoint returns the agreement module manifest.", response = ModuleManifest.class)
+    @ApiResponses(value = {
+        @ApiResponse(code = 200, message = "The agreement module manifest in JSON format")})
     @RequestMapping(value = "/api/v2",
             produces = {"application/json", "text/plain"},
             method = RequestMethod.GET)
     public ResponseEntity<ModuleManifest> rootApiGet() throws NotFoundException {
-        return new ResponseEntity<>(module, HttpStatus.OK);
+        return rootGet();
     }
 
     @ApiOperation(value = "", notes = "This endpoint returns the agreement module manifest.", response = ModuleManifest.class)
